--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -240,15 +240,15 @@ textarea {
 .m {
   padding-bottom: 2rem; }
 
-#movimientos {
+footer {
+  min-width: none;
+  height: 6vh;
+  background-color: #389db5;
   display: flex;
-  flex-direction: column; }
-
-h3 {
-  display: inline; }
-
-.movimientos__secciones {
-  display: flex;
-  justify-content: space-around;
-  align-items: space-evenly;
-  gap: 20rem; }
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap; }
+  footer div {
+    font-size: 2rem;
+    color: white; }
